// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <ProfileImage
    alt="A profile image"
    fit="cover"
    height="75"
    src="profile.jpg"
    variant="default"
    width="75"
  >
    <Image
      alt="A profile image"
      className="profile-image orion-fusion-theme"
      fit="cover"
      height="75"
      isFluid={false}
      placeholder={
        <span
          aria-label="A profile image"
          className="profile-image placeholder cover default orion-fusion-theme"
          role="img"
          style={
            Object {
              "height": "75px",
              "width": "75px",
            }
          }
        />
      }
      src="profile.jpg"
      variant="default"
      width="75"
    >
      <img
        alt="A profile image"
        className="image cover default orion-fusion-theme hidden profile-image orion-fusion-theme"
        height="75"
        onError={[Function]}
        onLoad={[Function]}
        src="profile.jpg"
        width="75"
      />
      <span
        aria-label="A profile image"
        className="profile-image placeholder cover default orion-fusion-theme"
        role="img"
        style={
          Object {
            "height": "75px",
            "width": "75px",
          }
        }
      />
    </Image>
  </ProfileImage>
</ThemeContextProvider>
`;

exports[`should render a Terra image with a placeholder prop 1`] = `
<Image
  alt="A profile image"
  className="profile-image"
  fit="cover"
  height="75"
  isFluid={false}
  placeholder={
    <span
      aria-label="A profile image"
      className="profile-image placeholder cover default"
      role="img"
      style={
        Object {
          "height": "75px",
          "width": "75px",
        }
      }
    />
  }
  src="profile.jpg"
  variant="default"
  width="75"
/>
`;

exports[`should render a profile image with fit style as contain 1`] = `
<Image
  alt="A profile image"
  className="profile-image"
  fit="contain"
  height="75"
  isFluid={false}
  placeholder={
    <span
      aria-label="A profile image"
      className="profile-image placeholder contain default"
      role="img"
      style={
        Object {
          "height": "75px",
          "width": "75px",
        }
      }
    />
  }
  src="profile.jpg"
  variant="default"
  width="75"
/>
`;

exports[`should render an avatar image without Source prop 1`] = `
<span
  aria-label="Default"
  className="profile-image placeholder cover default"
  role="img"
  style={
    Object {
      "height": "75px",
      "width": "75px",
    }
  }
/>
`;

exports[`should render an avatar image without alt prop 1`] = `
<span
  className="profile-image placeholder cover default"
  role="presenetation"
  style={
    Object {
      "height": "75px",
      "width": "75px",
    }
  }
/>
`;
